option (USE_OPENMP "use omp" ON)

if (USE_OPENMP)
  find_package (OpenMP)
  if (OPENMP_FOUND)
    set (HAVE_OMP_H TRUE)
    set (CMAKE_CXX_FLAGS "${OpenMP_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
    set (CMAKE_SHARED_LIBRARY_CXX_FLAGS "${OpenMP_CXX_FLAGS} ${CMAKE_SHARED_LIBRARY_CXX_FLAGS}")
  endif ()
endif ()

add_custom_target (tests)

macro (tbb_add_test name)
  set (source test_${name}.cpp)
  add_executable (test_${name} EXCLUDE_FROM_ALL ${source})
  target_link_libraries (test_${name} tbb)
  add_dependencies (tests test_${name})
endmacro()


tbb_add_test (assembly)
tbb_add_test (tbb_fork)
# tbb_add_test (assembly_compiler_builtins)
tbb_add_test (aligned_space)
tbb_add_test (atomic)  
# tbb_add_test (atomic_pic)
# tbb_add_test (atomic_compiler_builtins) 
tbb_add_test (blocked_range)
tbb_add_test (blocked_range2d)  
tbb_add_test (blocked_range3d)  
tbb_add_test (concurrent_queue) 
tbb_add_test (concurrent_vector)
tbb_add_test (concurrent_unordered_set) 
tbb_add_test (concurrent_unordered_map) 
tbb_add_test (concurrent_hash_map)  
tbb_add_test (enumerable_thread_specific)
tbb_add_test (handle_perror)
tbb_add_test (halt)
tbb_add_test (model_plugin) 
tbb_add_test (mutex)
tbb_add_test (mutex_native_threads) 
tbb_add_test (rwm_upgrade_downgrade)
tbb_add_test (cache_aligned_allocator)  
tbb_add_test (parallel_for) 
tbb_add_test (parallel_reduce)  
tbb_add_test (parallel_sort)
tbb_add_test (parallel_scan)
tbb_add_test (parallel_while)
tbb_add_test (parallel_do)  
tbb_add_test (pipeline)
tbb_add_test (pipeline_with_tbf)
tbb_add_test (parallel_pipeline)
tbb_add_test (task_scheduler_init)  
tbb_add_test (task_scheduler_observer)  
tbb_add_test (task)
tbb_add_test (tbb_thread)
tbb_add_test (std_thread)
tbb_add_test (tick_count)
tbb_add_test (inits_loop)
tbb_add_test (yield)
tbb_add_test (eh_tasks)
tbb_add_test (eh_algorithms)
tbb_add_test (eh_flow_graph)
tbb_add_test (parallel_invoke)  
tbb_add_test (task_group)
tbb_add_test (ittnotify)
tbb_add_test (parallel_for_each)
tbb_add_test (tbb_header)
tbb_add_test (combinable)
tbb_add_test (task_auto_init)
tbb_add_test (task_arena)
tbb_add_test (concurrent_monitor)
tbb_add_test (semaphore)
tbb_add_test (critical_section) 
tbb_add_test (reader_writer_lock)
tbb_add_test (tbb_condition_variable)
tbb_add_test (intrusive_list)
tbb_add_test (concurrent_priority_queue)
tbb_add_test (task_priority)
tbb_add_test (task_enqueue) 
tbb_add_test (task_steal_limit) 
tbb_add_test (hw_concurrency)
tbb_add_test (fp)  
tbb_add_test (tuple)
tbb_add_test (flow_graph)
tbb_add_test (broadcast_node)
tbb_add_test (continue_node)
tbb_add_test (function_node)
tbb_add_test (limiter_node) 
tbb_add_test (join_node)
tbb_add_test (buffer_node)  
tbb_add_test (queue_node)
tbb_add_test (priority_queue_node)  
tbb_add_test (sequencer_node)
tbb_add_test (source_node)  
tbb_add_test (overwrite_node)
tbb_add_test (write_once_node)  
tbb_add_test (indexer_node) 
tbb_add_test (multifunction_node)
tbb_add_test (split_node)
tbb_add_test (static_assert)
tbb_add_test (aggregator)
tbb_add_test (concurrent_lru_cache) 
tbb_add_test (examples_common_utility)  
tbb_add_test (dynamic_link) 
tbb_add_test (parallel_for_vectorization)
tbb_add_test (tagged_msg)
tbb_add_test (partitioner_whitebox) 
tbb_add_test (flow_graph_whitebox)  
tbb_add_test (tbb_version)
